--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -1,3 +1,9 @@
+h1 {
+	margin-top: 3rem;
+	color: rgb(43, 190, 146);
+	text-transform: uppercase;
+	text-shadow: 2px 2px 4px #000000;
+}
 .search-container {
 	display: flex;
 	margin-top: 5rem;
@@ -38,6 +44,7 @@
 .guide {
 	background-color: darken($dark-red, 5%);
 	margin-top: 2rem;
+	text-align: center;
 	position: absolute;
 	left: -100%;
 	top: 18%;
@@ -60,6 +67,7 @@
 
 .movies {
 	margin-top: 3rem;
+	@include grid(25rem);
 
 	.card {
 		display: flex;
