--- a/src/sass/_mq.scss
+++ b/src/sass/_mq.scss
@@ -1,16 +1,26 @@
-@media (min-width: 768px) {
-	movies-container {
+@media (min-width: 1024px) {
+	.movies-container {
 		display: grid;
-		grid-template-columns: 1fr 1fr;
+
+		grid-template-columns: 1fr 2fr 2fr;
+		grid-template-rows: auto;
 	}
 
 	.guide-button {
 		display: none;
 	}
 
+	.guide {
+		grid-column: 1 / span 1;
+		grid-row: 1 / span 1;
+		position: static;
+		margin: 0;
+		height: auto;
+		width: 20rem;
+	}
+
 	.movies {
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		gap: 1.5rem;
+		grid-column: 2 / span 4;
+		margin: 0;
 	}
 }
