--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -1,84 +1,47 @@
-h1 {
-	margin-top: 3rem;
-	color: rgb(43, 190, 146);
-	text-transform: uppercase;
-	text-shadow: 2px 2px 4px #000000;
-}
-.search-container {
-	display: flex;
-	margin-top: 5rem;
-}
-
-.search-bar {
-	border-radius: 5px;
-	border: 2px solid $black;
-	color: $white;
-	background-color: #222;
-	width: 100%;
-	height: 3rem;
-}
-
-.search-button {
-	background: none;
-	border: none;
-	color: $white;
-	position: relative;
-	transform: translateX(-100%);
-}
-
-.movies-container {
-	margin-top: 5rem;
-}
-
-.guide-button {
-	background: none;
-	border: none;
-	color: $white;
-	font-size: 3rem;
-}
-
-.guide-button-container {
-	text-align: center;
-}
-
-.guide {
-	background-color: darken($dark-red, 5%);
-	margin-top: 2rem;
-	text-align: center;
-	position: absolute;
-	left: -100%;
-	top: 18%;
-	width: 100%;
-	height: 100%;
-	transition: all 0.5s;
-	z-index: 1;
-
-	li {
-		padding: 0.8rem;
-		font-size: 1.8rem;
-		font-weight: bold;
+header {
+	.card {
+		background-color: rgb(102, 97, 97);
+		border-radius: 5px;
+	}
+	.input-box {
+		background-color: #bc4b51;
 		color: $black;
+		border-radius: 5px;
+
+		.form-control {
+			background-color: #bc4b51;
+			border: none;
+			font-size: 1.7rem;
+			color: $black;
+			border-radius: 5px;
+
+			&:focus {
+				box-shadow: none;
+			}
+		}
+
+		button {
+			background: none;
+			border: none;
+		}
+		.fa-search {
+			padding: 0 1rem;
+		}
 	}
 }
 
-.left0 {
-	left: 0;
-}
-
-.movies {
-	margin-top: 3rem;
-	@include grid(25rem);
+main {
+	button {
+		background: white;
+	}
+	.navbar-nav {
+		flex-direction: column !important;
+	}
+	.dropdown-menu {
+		background: darken($dark-red, 10);
+	}
 
 	.card {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		margin-bottom: 2rem;
-
-		h3 {
-			margin: 1rem 0;
-			text-align: center;
-		}
+		width: 100%;
 	}
 }
