--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -50,6 +50,9 @@ h3 {
 
 h1 {
 	font-size: 4rem;
+	color: rgb(43, 190, 146);
+	text-transform: uppercase;
+	text-shadow: 2px 2px 4px #000000;
 }
 h2 {
 	font-size: 3.6rem;
