header layout improved

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,9 @@
 // COLORS
-$dark-red: #a4243b;
-$black: #151515;
+$red: #e50914;
+$black: #141414;
 $white: #ffffff;
+$gray: #e5e5e5;
+$dark-gray: #b3b3b3;
 
 // FONTS
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
