--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -1,15 +1,41 @@
-header {
-	.card {
-		background-color: rgb(102, 97, 97);
-		border-radius: 5px;
+.header {
+	h1 {
+		margin: 0;
 	}
-	.input-box {
-		background-color: #bc4b51;
+	.dropdown {
+		.dropdown-toggle {
+			background-color: $red;
+			color: $black;
+			border: none;
+			padding: 0.5rem 1rem;
+			border-radius: 5px;
+		}
+
+		.dropdown-menu {
+			background-color: $black;
+
+			.dropdown-item {
+				padding: 0.5rem;
+				color: $gray;
+				background-color: $black;
+				cursor: pointer;
+				font-size: 1.3rem;
+
+				&:hover {
+					color: $dark-gray;
+				}
+			}
+		}
+	}
+
+	.search-box {
+		width: 65%;
+		background-color: $white;
 		color: $black;
 		border-radius: 5px;
 
 		.form-control {
-			background-color: #bc4b51;
+			background-color: $white;
 			border: none;
 			font-size: 1.7rem;
 			color: $black;
@@ -30,95 +56,49 @@ header {
 	}
 }
 
-main {
-	button {
-		background: white;
-	}
-	.navbar-nav {
-		flex-direction: column !important;
-		background-color: darken($dark-red, 5);
-		border-radius: 5px;
-		box-shadow: 0px 0px 5px 1px darken($dark-red, 10);
-	}
-	.dropdown-menu {
-		background: darken($dark-red, 10);
-	}
-
-	.card {
-		width: 100%;
-		height: 100%;
-		overflow-y: hidden;
+.popular-movies {
+	margin: 3rem 0;
+	.popular-card {
 		position: relative;
-		background-color: $dark-red;
-		color: $black;
-		border-radius: 5px;
-		box-shadow: 0px 0px 5px 1px darken($dark-red, 10);
+		width: 100%;
+		height: 25rem;
 
-		ul li {
-			background-color: $dark-red;
-			color: $black;
-		}
-
-		&:hover .overview {
-			visibility: visible;
-			opacity: 1;
-			overflow-y: auto;
-		}
-		.overview {
-			position: absolute;
-			background-color: lighten($dark-red, 20);
-			color: $black;
-			left: 0;
-			top: 0;
-			visibility: hidden;
-			opacity: 0;
-			transition: visibility 0s, opacity 0.5s linear;
-			padding: 1rem;
-			z-index: 1;
+		.img {
+			display: block;
+			width: 100%;
 			height: 100%;
 		}
 	}
 }
+.image-overlay {
+	position: absolute;
+	overflow-y: auto;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	transition: all 0.5s;
 
-#tags {
-	.highlight {
-		background-color: #fff;
+	&:hover {
+		background: rgba(0, 0, 0, 0.6);
+		backdrop-filter: blur(7px);
+		opacity: 1;
 	}
-	li {
-		cursor: pointer;
+}
+.overview {
+	padding: 1rem;
+	h3 {
+		color: $white;
+		text-align: left;
+	}
+
+	p {
+		color: $white;
 	}
 }
 
-.page-container {
-	display: flex;
-	gap: 2rem;
-	justify-content: center;
-	align-items: center;
-	margin-bottom: 3rem;
-
-	#current {
-		height: 3rem;
-		width: 3rem;
-		background-color: lighten($dark-red, 20);
-		border-radius: 50%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		font-size: 2rem;
-		font-weight: bold;
-		box-shadow: 0px 0px 5px 1px $black;
-	}
-
-	#prev,
-	#next {
-		background-color: lighten($dark-red, 20);
-		padding: 0.5rem 1rem;
-		border-radius: 5px;
-		cursor: pointer;
-		box-shadow: 0px 0px 5px 1px $black;
-
-		&:hover {
-			background-color: darken($dark-red, 10);
-		}
-	}
+.swiper {
+	width: 100%;
+	height: 25rem;
 }
