--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -2,14 +2,13 @@ html {
 	font-size: 62.5%;
 	box-sizing: border-box;
 	overflow-x: hidden;
-	scroll-behavior: smooth;
 
 	&::-webkit-scrollbar {
 		width: 10px;
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background: $dark-red;
+		background: $red;
 		border-radius: 20px;
 	}
 
@@ -28,7 +27,7 @@ html {
 body {
 	font-family: $main-font;
 	font-size: 1.6rem;
-	background-color: $dark-red;
+	background-color: $black;
 	text-transform: uppercase;
 }
 p {
@@ -51,12 +50,11 @@ h3 {
 
 h1 a {
 	font-size: 4rem;
-	color: rgb(43, 190, 146);
+	color: $red;
 	text-transform: uppercase;
-	text-shadow: 2px 2px 4px #000000;
 
 	&:hover {
-		color: rgb(43, 190, 146);
+		color: $white;
 	}
 }
 h2 {
@@ -71,8 +69,4 @@ li {
 }
 img {
 	object-fit: cover;
-}
-.container {
-	width: 90%;
-	margin: 0 auto;
 }
