--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -56,49 +56,79 @@
 	}
 }
 
-.popular-movies {
-	margin: 3rem 0;
-	.popular-card {
-		position: relative;
-		width: 100%;
-		height: 25rem;
+.popular-movies-slider {
+	.swiper-wrapper {
+		padding: 20px 0;
+	}
 
-		.img {
-			display: block;
-			width: 100%;
-			height: 100%;
+	.swiper-slide {
+		transition: 250ms all;
+
+		&:hover {
+			transform: scale(1.2);
+			z-index: 1;
+		}
+
+		&:first-child:hover {
+			margin: 0 40px;
+		}
+
+		&:last-child:hover {
+			margin: 0 -40px;
 		}
 	}
 }
-.image-overlay {
-	position: absolute;
-	overflow-y: auto;
-	top: 0;
-	left: 0;
+
+.swiper-container {
 	width: 100%;
 	height: 100%;
-	opacity: 0;
-	transition: all 0.5s;
 
-	&:hover {
-		background: rgba(0, 0, 0, 0.6);
-		backdrop-filter: blur(7px);
-		opacity: 1;
+	img {
+		max-width: 100%;
+		height: auto;
 	}
 }
-.overview {
-	padding: 1rem;
-	h3 {
-		color: $white;
-		text-align: left;
-	}
-
-	p {
-		color: $white;
-	}
+.swiper-slide {
+	text-align: center;
+	font-size: 18px;
 }
 
-.swiper {
-	width: 100%;
-	height: 25rem;
+.swiper-button-prev,
+.swiper-button-next {
+	color: $dark-gray;
+}
+
+.movie {
+	position: relative;
+
+	.image-overlay {
+		position: absolute;
+		top: 0;
+		left: 0;
+		overflow-y: auto;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		background: rgba(0, 0, 0, 0.9);
+
+		&:hover {
+			opacity: 1;
+		}
+
+		.overview {
+			backdrop-filter: blur(7px);
+			padding: 1rem;
+			h3 {
+				font-size: 1.2rem;
+				color: $white;
+				text-align: left;
+			}
+
+			p {
+				font-size: 1rem;
+				text-align: left;
+				color: $dark-gray;
+			}
+		}
+	}
 }
