--- a/src/sass/_root.scss
+++ b/src/sass/_root.scss
@@ -44,7 +44,6 @@ h1,
 h2,
 h3 {
 	font-weight: 900;
-	color: $black;
 	text-align: center;
 }
 
@@ -69,4 +68,10 @@ li {
 }
 img {
 	object-fit: cover;
+}
+.subtitle {
+	color: $white;
+	text-align: left;
+	margin: 3rem 0 0 1rem;
+	font-size: 2rem;
 }
