--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -77,25 +77,26 @@
 			margin: 0 -40px;
 		}
 	}
-}
 
-.swiper-container {
-	width: 100%;
-	height: 100%;
+	.swiper-container-popular {
+		width: 100%;
+		height: 100%;
 
-	img {
-		max-width: 100%;
-		height: auto;
+		img {
+			border-radius: 10px;
+			width: 100%;
+			height: 35rem;
+		}
 	}
-}
-.swiper-slide {
-	text-align: center;
-	font-size: 18px;
-}
+	.swiper-slide {
+		text-align: center;
+		font-size: 18px;
+	}
 
-.swiper-button-prev,
-.swiper-button-next {
-	color: $dark-gray;
+	.swiper-button-prev,
+	.swiper-button-next {
+		color: $dark-gray;
+	}
 }
 
 .movie {
@@ -110,14 +111,14 @@
 		height: 100%;
 		opacity: 0;
 		background: rgba(0, 0, 0, 0.9);
+		backdrop-filter: blur(7px);
 
 		&:hover {
 			opacity: 1;
 		}
 
 		.overview {
-			backdrop-filter: blur(7px);
-			padding: 1rem;
+			padding: 2rem;
 			h3 {
 				font-size: 1.2rem;
 				color: $white;
@@ -130,5 +131,54 @@
 				color: $dark-gray;
 			}
 		}
+	}
+
+	.info-movie {
+		display: block;
+		text-align: left;
+		color: $gray;
+	}
+}
+
+.latest-movies-slider {
+	.swiper-wrapper {
+		padding: 20px 0;
+	}
+
+	.swiper-slide {
+		transition: 250ms all;
+
+		&:hover {
+			transform: scale(1.2);
+			z-index: 1;
+		}
+
+		&:first-child:hover {
+			margin: 0 40px;
+		}
+
+		&:last-child:hover {
+			margin: 0 -40px;
+		}
+	}
+
+	.swiper-container-latest {
+		width: 100%;
+		height: 100%;
+
+		img {
+			border-radius: 10px;
+			width: 100%;
+			height: 40rem;
+		}
+	}
+	.swiper-slide {
+		text-align: center;
+		font-size: 18px;
+	}
+
+	.swiper-button-prev,
+	.swiper-button-next {
+		color: $dark-gray;
 	}
 }
