--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -57,27 +57,6 @@
 }
 
 .popular-movies-slider {
-	.swiper-wrapper {
-		padding: 20px 0;
-	}
-
-	.swiper-slide {
-		transition: 250ms all;
-
-		&:hover {
-			transform: scale(1.2);
-			z-index: 1;
-		}
-
-		&:first-child:hover {
-			margin: 0 40px;
-		}
-
-		&:last-child:hover {
-			margin: 0 -40px;
-		}
-	}
-
 	.swiper-container-popular {
 		width: 100%;
 		height: 100%;
@@ -87,15 +66,6 @@
 			width: 100%;
 			height: 35rem;
 		}
-	}
-	.swiper-slide {
-		text-align: center;
-		font-size: 18px;
-	}
-
-	.swiper-button-prev,
-	.swiper-button-next {
-		color: $dark-gray;
 	}
 }
 
@@ -141,27 +111,6 @@
 }
 
 .latest-movies-slider {
-	.swiper-wrapper {
-		padding: 20px 0;
-	}
-
-	.swiper-slide {
-		transition: 250ms all;
-
-		&:hover {
-			transform: scale(1.2);
-			z-index: 1;
-		}
-
-		&:first-child:hover {
-			margin: 0 40px;
-		}
-
-		&:last-child:hover {
-			margin: 0 -40px;
-		}
-	}
-
 	.swiper-container-latest {
 		width: 100%;
 		height: 100%;
@@ -169,16 +118,97 @@
 		img {
 			border-radius: 10px;
 			width: 100%;
-			height: 40rem;
+			height: 25rem;
 		}
 	}
-	.swiper-slide {
-		text-align: center;
-		font-size: 18px;
+}
+
+.swiper-slide {
+	text-align: center;
+	font-size: 18px;
+}
+
+.swiper-wrapper {
+	padding: 20px 0;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	color: $dark-gray;
+}
+
+.movies-container {
+	.grid-container {
+		display: grid;
+		grid-template-columns: 1fr;
+		gap: 2rem;
 	}
 
-	.swiper-button-prev,
-	.swiper-button-next {
-		color: $dark-gray;
+	h2 {
+		margin-bottom: 2rem;
+	}
+	.movie {
+		img {
+			border-radius: 10px;
+			display: block;
+			margin: 0 auto;
+			width: 95%;
+			height: 35rem;
+		}
+	}
+
+	.pagination {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 2rem;
+		margin: 3rem 0;
+		color: $gray;
+		width: 95%;
+
+		#prev,
+		#next {
+			display: block;
+			text-align: center;
+			cursor: pointer;
+			&:hover {
+				color: $dark-gray;
+			}
+		}
+
+		#current {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background-color: $dark-gray;
+			width: 25px;
+			height: 25px;
+			border-radius: 100%;
+			color: $black;
+		}
+	}
+}
+
+.footer {
+	display: flex;
+	justify-content: space-around;
+	background-color: $dark-gray;
+
+	.contact {
+		display: flex;
+		gap: 2rem;
+		justify-content: center;
+		align-items: center;
+		color: $black;
+
+		a {
+			color: $black;
+		}
+	}
+
+	.copy {
+		span {
+			color: $black;
+		}
 	}
 }
