--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -13,6 +13,7 @@
 
 		.dropdown-menu {
 			background-color: $black;
+			transform: translateX(-8px);
 
 			.dropdown-item {
 				padding: 0.5rem;
@@ -211,4 +212,8 @@
 			color: $black;
 		}
 	}
+}
+
+.highlight {
+	background-color: $dark-gray !important;
 }
