fetch and show trending movies

--- a/src/sass/_mq.scss
+++ b/src/sass/_mq.scss
@@ -53,7 +53,7 @@
 		}
 	}
 
-	.popular-movies-slider,
+	.trending-movies-slider,
 	.latest-movies-slider {
 		.swiper-slide {
 			transition: 250ms all;
