--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -57,8 +57,8 @@
 	}
 }
 
-.popular-movies-slider {
-	.swiper-container-popular {
+.trending-movies-slider {
+	.swiper-container-trending {
 		width: 100%;
 		height: 100%;
 
