fetch and show top rated movies

--- a/src/sass/_main-sections.scss
+++ b/src/sass/_main-sections.scss
@@ -111,8 +111,8 @@
 	}
 }
 
-.latest-movies-slider {
-	.swiper-container-latest {
+.top-rated-movies-slider {
+	.swiper-container-top-rated {
 		width: 100%;
 		height: 100%;
 
