--- a/src/sass/_overlay-trailers.scss
+++ b/src/sass/_overlay-trailers.scss
@@ -15,7 +15,7 @@
 /* Position the content inside the overlay */
 .overlay-content {
 	position: relative;
-	top: 25%; /* 25% from the top */
+	top: 10%; /* 10% from the top */
 	width: 100%; /* 100% width */
 	text-align: center; /* Centered text/links */
 	margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
@@ -34,7 +34,7 @@
 /* When you mouse over the navigation links, change their color */
 .overlay-trailers a:hover,
 .overlay-trailers a:focus {
-	color: #f1f1f1;
+	color: $white;
 }
 
 /* Position the close button (top right corner) */
@@ -62,8 +62,9 @@
 	position: fixed;
 	top: 0;
 	right: 0;
-	width: 40rem;
-	height: 10rem;
+	width: 100%;
+	height: 6rem;
+	text-align: center;
 }
 
 .embed.hide {
@@ -72,4 +73,69 @@
 
 .embed.show {
 	display: inline-block;
+	width: 80%;
+	height: 40vh;
+}
+
+.arrow {
+	position: absolute;
+}
+
+.left-arrow {
+	left: 5%;
+	bottom: 20%;
+}
+
+.right-arrow {
+	right: 5%;
+	bottom: 20%;
+}
+
+@media (min-width: 768px) {
+	.embed.show {
+		height: 40rem;
+	}
+	.left-arrow {
+		top: 50%;
+		bottom: auto;
+		transform: translateY(-50%);
+	}
+
+	.right-arrow {
+		top: 50%;
+		bottom: auto;
+		transform: translateY(-50%);
+	}
+}
+
+@media (min-width: 1440px) {
+	.embed.show {
+		width: 100rem;
+		height: 40rem;
+	}
+}
+
+.dots {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+	margin-top: 2rem;
+	.dot {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 3rem;
+		height: 3rem;
+		color: $black;
+		background-color: rgb(105, 25, 25);
+		border-radius: 50%;
+		border: 2px solid $red;
+		font-weight: bold;
+	}
+
+	.dot.active {
+		border: 2px solid rgb(255, 136, 0);
+		background-color: $red;
+	}
 }
