--- a/src/sass/_overlay-trailers.scss
+++ b/src/sass/_overlay-trailers.scss
@@ -19,6 +19,8 @@
 	width: 100%; /* 100% width */
 	text-align: center; /* Centered text/links */
 	margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+	background-color: $black;
+	padding: 3rem 0;
 }
 
 /* The navigation links inside the overlay */
@@ -43,6 +45,7 @@
 	top: 20px;
 	right: 45px;
 	font-size: 60px;
+	cursor: pointer;
 }
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
@@ -138,4 +141,9 @@
 		border: 2px solid rgb(255, 136, 0);
 		background-color: $red;
 	}
+}
+
+.stop-scrolling {
+	height: 100%;
+	overflow: hidden;
 }
