--- a/sass/_main-sections.scss
+++ b/sass/_main-sections.scss
@@ -9,6 +9,22 @@ header {
 	h1 {
 		margin: 0;
 	}
+
+	.see-later {
+		background-color: $red;
+		color: $black;
+		border: none;
+		padding: 0.5rem 1rem;
+		border-radius: 5px;
+		cursor: pointer;
+		text-transform: uppercase;
+
+		&:hover {
+			color: $white;
+			background-color: darken($red, 10);
+		}
+	}
+
 	.dropdown {
 		.dropdown-toggle {
 			background-color: $red;
@@ -16,6 +32,7 @@ header {
 			border: none;
 			padding: 0.5rem 1rem;
 			border-radius: 5px;
+			text-transform: uppercase;
 		}
 
 		.dropdown-menu {
