Update root.scss html scrollbar

--- a/sass/_root.scss
+++ b/sass/_root.scss
@@ -3,16 +3,16 @@ html {
 	box-sizing: border-box;
 	overflow-x: hidden;
 
-	&::-webkit-scrollbar {
+	::-webkit-scrollbar {
 		width: 10px;
 	}
 
-	&::-webkit-scrollbar-thumb {
+	::-webkit-scrollbar-thumb {
 		background: $red;
 		border-radius: 20px;
 	}
 
-	&::-webkit-scrollbar-track {
+	::-webkit-scrollbar-track {
 		background: $black;
 		border-radius: 20px;
 	}
